[Added] NullableTypesFormatInspectionTestCase: tests implemented;